--- a/profile-master/sass/style.scss
+++ b/profile-master/sass/style.scss
@@ -622,6 +622,10 @@ h1, h2, h3, h4, h5, h6, figure {
 	color: lighten($brand-black, 75%);
 }
 
+.company2{
+	text-align: justify;
+}
+
 .timeline-body > p,
 .timeline-body > ul {
     margin-bottom: 0;
