--- a/profile-master/css/style.css
+++ b/profile-master/css/style.css
@@ -592,6 +592,11 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #bfbfbf;
 }
 
+.company2 {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 .timeline-body > p,
 .timeline-body > ul {
   margin-bottom: 0;
