--- a/profile-master/css/style.css
+++ b/profile-master/css/style.css
@@ -689,6 +689,12 @@ h1, h2, h3, h4, h5, h6, figure {
   background-color: #27ae60 !important;
 }
 
+.try {
+  object-fit: fill;
+  width:100%; 
+  height:100%;
+}
+
 .chart {
   width: 160px;
   height: 160px;
